// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 발견 (글자 100%) 1`] = `
{
  "krTradingValue": {
    "nodes": 20,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "6b5b7d5a3f8fc08c",
  },
  "krVolume": {
    "nodes": 20,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "0c58c21feef31fad",
  },
  "themeHeat": {
    "nodes": 102,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준테마업종오늘1주1개월오늘 테마 7개 · 상승 4 · 하락 2상승률순가장 강한조선 +3.42%가장 약한2차전지 -1.87%-5%+5%조선+3.42%▲10 ▼3원자력발전+3.05%▲9 ▼4방위산업+2.71%▲8 ▼5전력설비+1.98%▲7 ▼6바이오시밀러0.00%▲6 ▼7인터넷 플랫폼-0.84%▲5 ▼82차전지-1.87%▲4 ▼9테마 등락률: 구성 종목 평균 · 출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "859f51cba1c2cbb1",
  },
  "themeList": {
    "nodes": 166,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준테마업종오늘1주1개월오늘 테마 7개 · 상승 4 · 하락 2상승률순가장 강한조선 +3.42%가장 약한2차전지 -1.87%1조선한화오션 +4.11%▲10 ▼32원자력발전한화오션 +4.11%▲9 ▼43방위산업한화오션 +4.11%▲8 ▼54전력설비한화오션 +4.11%▲7 ▼65바이오시밀러한화오션 +4.11%▲6 ▼76인터넷 플랫폼한화오션 +4.11%▲5 ▼872차전지한화오션 +4.11%▲4 ▼9테마 등락률: 구성 종목 평균 · 출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "a7d64b87b68961d3",
  },
  "usKrw": {
    "nodes": 18,
    "text": "장 마감 · 직전 정규장 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "8ede0cae52d099e2",
  },
  "usTradingValue": {
    "nodes": 18,
    "text": "장 마감 · 직전 정규장 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "ab2778fa7b0a2692",
  },
}
`;

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 발견 (글자 130% · 다크) 1`] = `
{
  "krTradingValue": {
    "nodes": 20,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "616b839e97972b5c",
  },
  "krVolume": {
    "nodes": 20,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "8666845750655205",
  },
  "themeHeat": {
    "nodes": 102,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준테마업종오늘1주1개월오늘 테마 7개 · 상승 4 · 하락 2상승률순가장 강한조선 +3.42%가장 약한2차전지 -1.87%-5%+5%조선+3.42%▲10 ▼3원자력발전+3.05%▲9 ▼4방위산업+2.71%▲8 ▼5전력설비+1.98%▲7 ▼6바이오시밀러0.00%▲6 ▼7인터넷 플랫폼-0.84%▲5 ▼82차전지-1.87%▲4 ▼9테마 등락률: 구성 종목 평균 · 출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "1eb7a4335e75a6fc",
  },
  "themeList": {
    "nodes": 166,
    "text": "장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준테마업종오늘1주1개월오늘 테마 7개 · 상승 4 · 하락 2상승률순가장 강한조선 +3.42%가장 약한2차전지 -1.87%1조선한화오션 +4.11%▲10 ▼32원자력발전한화오션 +4.11%▲9 ▼43방위산업한화오션 +4.11%▲8 ▼54전력설비한화오션 +4.11%▲7 ▼65바이오시밀러한화오션 +4.11%▲6 ▼76인터넷 플랫폼한화오션 +4.11%▲5 ▼872차전지한화오션 +4.11%▲4 ▼9테마 등락률: 구성 종목 평균 · 출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "2d63f48c39d50fb8",
  },
  "usKrw": {
    "nodes": 18,
    "text": "장 마감 · 직전 정규장 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "6bed08602acdb79f",
  },
  "usTradingValue": {
    "nodes": 18,
    "text": "장 마감 · 직전 정규장 기준 · 9월 23일 (수) 15:30 기준출처: toss
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
    "tree": "61a8ee092e2f4308",
  },
}
`;

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 비중 (글자 100%) 1`] = `
{
  "nodes": 102,
  "text": "총 평가금액 · 비용 차감11,462,928 원보유 2종목의 원화 평가금액으로 나눈 비중입니다. 잔고 탭 총 평가금액과 같은 기준입니다.국내 / 해외해외92.6%이름평가금액비중국내843,000원7.4%해외10,619,928원92.6%통화달러92.6%이름평가금액비중원화843,000원7.4%달러10,619,928원92.6%업종하드웨어92.6%이름평가금액비중하드웨어10,619,928원92.6%반도체843,000원7.4%종목별애플92.6%이름평가금액비중애플10,619,928원92.6%삼성전자843,000원7.4%",
  "tree": "f9645f1a018af7bf",
}
`;

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 비중 (글자 130% · 다크) 1`] = `
{
  "nodes": 102,
  "text": "총 평가금액 · 비용 차감11,462,928 원보유 2종목의 원화 평가금액으로 나눈 비중입니다. 잔고 탭 총 평가금액과 같은 기준입니다.국내 / 해외해외92.6%이름평가금액비중국내843,000원7.4%해외10,619,928원92.6%통화달러92.6%이름평가금액비중원화843,000원7.4%달러10,619,928원92.6%업종하드웨어92.6%이름평가금액비중하드웨어10,619,928원92.6%반도체843,000원7.4%종목별애플92.6%이름평가금액비중애플10,619,928원92.6%삼성전자843,000원7.4%",
  "tree": "8f789879e0463bc6",
}
`;

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 설정 (글자 100%) 1`] = `
{
  "nodes": 53,
  "text": "표시화면해외주식 원화 표시토스증권 적용 환율 기준수수료·세금 차감 평가토스 앱과 같은 평가금액·손익 (토스 연동 종목)잔고 정렬홈 화면 위젯 갱신앱을 열면 즉시 · 닫혀 있으면 장중 약 15분, 휴장 2~4시간마다 · 위젯의 ↻ 로 즉시서버서버 연결정보투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
  "tree": "537060061053c2de",
}
`;

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 설정 (글자 130% · 다크) 1`] = `
{
  "nodes": 53,
  "text": "표시화면해외주식 원화 표시토스증권 적용 환율 기준수수료·세금 차감 평가토스 앱과 같은 평가금액·손익 (토스 연동 종목)잔고 정렬홈 화면 위젯 갱신앱을 열면 즉시 · 닫혀 있으면 장중 약 15분, 휴장 2~4시간마다 · 위젯의 ↻ 로 즉시서버서버 연결정보투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
  "tree": "946121bd72c22874",
}
`;

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 테마 상세 (글자 100%) 1`] = `
{
  "nodes": 25,
  "text": "한국 테마 · 구성 15종목 (거래정지 1) · 오늘+3.42%상승 10 · 보합 2 · 하락 3선박을 만드는 회사들등락률: 구성 종목 평균장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준출처: toss · 길게 누르면 관심 추가
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
  "tree": "e49babb2b6175003",
}
`;

exports[`좁은 창·플래그 꺼짐: 3-42 이전 화면과 똑같다 (기록한 스냅숏과 비교) > 테마 상세 (글자 130% · 다크) 1`] = `
{
  "nodes": 25,
  "text": "한국 테마 · 구성 15종목 (거래정지 1) · 오늘+3.42%상승 10 · 보합 2 · 하락 3선박을 만드는 회사들등락률: 구성 종목 평균장 마감 · 마지막 거래 기준 · 9월 23일 (수) 15:30 기준출처: toss · 길게 누르면 관심 추가
투자 판단의 책임은 본인에게 있으며, 본 서비스는 투자 권유가 아닙니다.",
  "tree": "07223c9d768cdd1d",
}
`;
